src/objects/Profile_Group_Mapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Group_Id__c</fullName>
        <label>Group Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Name__c</fullName>
        <label>Group Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile_Id__c</fullName>
        <label>Profile Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Profile Group Mapping</label>
</CustomObject>